// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SkuOptionInput check children type date /> 1`] = `
<input
  name="expiresAt"
  onChange={[Function]}
  type="date"
/>
`;

exports[`<SkuOptionInput check children type textarea /> 1`] = `
<textarea
  name="reference"
  onChange={[Function]}
  type="textarea"
/>
`;

exports[`<SkuOptionInput check type required /> 1`] = `
<input
  onChange={[Function]}
/>
`;

exports[`<SkuOptionInput with custom children /> 1`] = `<span />`;

exports[`<SkuOptionInput/> 1`] = `
<input
  name="firstName"
  onChange={[Function]}
  type="text"
/>
`;
